@@ -1,3 +1,14 @@
+2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* AppController.m (-compareFilesToCVS:):
+	* DiffMiddleView.m (-dealloc):
+	* DiffTextView.m (-setLineRanges:):
+	* DiffView.m (-dealloc):
+	* DiffWindowController.m (-dealloc, -_patchMutableString:):
+	* DiffWrapper.m (tasktest):
+	Remove a number of space leaks and properly stop observing
+	notifications when objects are deallocated.
+
 2008-03-09 Adam Fedor  <fedor@gnu.org>
 
 	* Version 0.4.0
